oggdemux: increase EOS granpos detection chunk size

This can be too small on some files to find a valid granule.

https://bugzilla.gnome.org/show_bug.cgi?id=770314